avoid uneven horizontal spaces

--- a/src/router/kromo/dd-wrt/common_style/common.css
+++ b/src/router/kromo/dd-wrt/common_style/common.css
@@ -293,6 +293,9 @@ table {
   width: 100%;
   border-spacing: .1em;
 }
+table#radio_table {
+  border-spacing: .1666em
+}
 table tr th {
   border-style: solid;
   border-width: 1px;
